edite mujer.html/cambie tamaño de columnas

--- a/mujer.html
+++ b/mujer.html
@@ -65,77 +65,77 @@
             <div class="row">
                 <section> 
             
-                <div class="col">
+                <div class="col-4">
                     <img src="imagenes/mujer/sweaterglobo.jpg" width="150" height="200">
                     <p>Sweater Manga Globo<p>
                     <p>Talle Unico</p>
                 </div>
-                <div class="col">
+                <div class="col-4">
                     <img src="imagenes/mujer/maxisweater.jpg" width="150" height="200">
                     <p>Maxisweater</p>
                     <p>Talle Unico</p>
                 </div>
-                <div class="col">
+                <div class="col-4">
                     <img src="imagenes/mujer/sweaterbasic.jpg"  width="150" height="200">
                     <p>Sweater Basic</p>
                     <p>Talle Unico</p>
                 </div>
-                <div class="col">
+                <div class="col-4">
                     <img src="imagenes/mujer/sweaterchic.jpg" width="150" height="200">
                     <p>Sweater Chic</p>
                     <p>Talle Unico</p>
                 </div>
-                <div class="col">
+                <div class="col-4">
                     <img src="imagenes/mujer/sweatermulticolor.jpg"  width="150" height="200">
                     <p>Sweater Mango Globo</p>
                     <p>Talle Unico</p>
                 </div>
-                <div class="col">
+                <div class="col-4">
                     <img src="imagenes/mujer/sweatermutitrenza.jpg"  width="150" height="200">
                     <p>Swater Multitrenza</p>
                     <p>Talle Unico</p>
                 </div>
-                <div class="col">
+                <div class="col-4">
                     <img src="imagenes/mujer/sweaternahiara.jpg" width="150" height="200">
                     <p>Sweater Nahiara</p>
                     <P>Talle Unico</P>
                 </div>
-                <div class="col">
+                <div class="col-4">
                     <img src="imagenes/mujer/sweaterlargo.jpg"  width="150" height="200">
                     <p>Sweater Largo</p>
                     <p>Talle Unico</p>
                 </div>
-                <div class="col">
+                <div class="col-4">
                     <img src="imagenes/mujer/sweatercebra.jpg" width="150" height="200">
                     <p>Swater Cebra</p>
                     <p>Talle Unico</p>
                 </div>
-                <div class="col">
+                <div class="col-4">
                     <img src="imagenes/mujer/sweatercorto.jpg"  width="150" height="200">
                     <p>Sweater Corto</p>
                     <P>Talle Unico</P>
                 </div>
-                <div class="col"> 
+                <div class="col-4"> 
                     <img src="imagenes/mujer/sweaterrayado.jpg"  width="150" height="200">
                     <p>Sweater Rayado</p>
                     <p>Talle Unico</p>
                 </div>
-                <div class="col">
+                <div class="col-4">
                     <img src="imagenes/mujer/sweatersuperpuesta.jpg"  width="150" height="200">
                     <p>Sweater Superpuesta</p>
                     <p>Talle Unico</p>
                 </div>
-                <div class="col">
+                <div class="col-4">
                     <img src="imagenes/mujer/sweatertigre.jpg"  width="150" height="200">
                     <p>Sweater Tigre</p>
                     <p>Talle Unico</p>
                 </div>
-                <div class="col">
+                <div class="col-4">
                     <img src="imagenes/mujer/sweaterbremer.jpg"  width="150" height="200">
                     <p>Sweater Bremer</p>
                     <p>Talle Unico</p>
                 </div>
-                <div class="col">
+                <div class="col-4">
                     <img src="imagenes/mujer/maxisweaterlola.jpg"  width="150" height="200">
                     <p>Maxisweater Lola</p>
                     <p>Talle Unico</p>
