--- a/hombre.html
+++ b/hombre.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <!--SEO-->
+        <!--KEYWORDS-->
+    <meta name="keywords" content="Indumentaria hombres por mayor">
+    <meta name="description" content="Venta ropa por mayor para hombres">
     <title>Ropa de Hombre por Mayor</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 
